<resources>
    <string name="app_name">looklook</string>
    <string name="toast">VideoShare</string>
    <string name="video_edit">视频编辑</string>
    <string name="camera_error">摄像机故障, 请重启手机</string>
    <string name="save">保存</string>
    <string name="ok">好的</string>
    <string name="cancel">取消</string>
    <string name="cancel_shoot">取消拍摄</string>
    <string name="cancel_record_audio">取消录音</string>
    <string name="cancel_install">取消安装</string>
    <string name="trans_code_cancel">转码已取消</string>
    <string name="trans_code_ok">转码已成功</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="str_activity_login_main_title">LookLook</string>
    <string name="str_activity_login_main_sinalogin">新浪微博账号登录</string>
    <string name="str_activity_login_main_tencentlogin">腾讯微博账号登录</string>
    <string name="str_activity_login_main_renrenlogin">人人微博账号登录</string>
    <string name="str_activity_login_main_looklooklogin">LookLook账号登录</string>
    <string name="str_activity_login_main_try">试玩</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="no_more_date">没有新内容可加载</string>
    <string name="loading_more_date">正在加载新内容</string>
    <string-array name="activity_home_entry_main_entries">
        <item>"主界面"</item>
        <item>"评论"</item>
        <item>"私信"</item>
        <item>"关注"</item>
        <item>"添加好友"</item>
        <item>"发现-地图模式"</item>
        <item>"@好友"</item>
        <item>"选择活动"</item>
        <item>"定位信息:GPS=1111.22,3333.11"</item>
        <item>"标签"</item>
        <item>"活动详情页"</item>
        <item>"更换空间封面"</item>
        <item>"粉丝"</item>
        <item>"设置"</item>
        <item>"注销用户"</item>
        <item>"评论详情页"</item>
        <item>"语音识别"</item>
        <item>"图片编辑"</item>
        <item>"视频编辑"</item>
        <item>"他人主页"</item>
        <item>"网络测试demo"</item>
        <item>"音频编辑"</item>
        <item>"详情"</item>
        <item>"附近"</item>
        <item>"观赏模式"</item>
        <item>"xaudioRecoder"</item>
        <item>"相册"</item>
        <item>"视频播放测试"</item>
    </string-array>
    <string-array name="weibo_invite">
        <item>邀请新浪微博好友</item>
        <item>邀请腾讯微博好友</item>
        <item>邀请人人网好友</item>
    </string-array>
    <string-array name="weibo_type">
        <item>sina</item>
        <item>tencent</item>
        <item>renren</item>
    </string-array>
    <string-array name="sexy_select">
        <item>男</item>
        <item>女</item>
        <item>保密</item>
    </string-array>
    <string name="setting">设置</string>
    <string name="set_feedback">意见反馈</string>
    <string name="feedback_num">140</string>
    <string name="base_set">基本设置</string>
    <string name="sysc_type">即拍即传设置</string>
    <string name="sysc_type_explain">视频拍摄过程中同时上传 ，节省上传时间</string>
    <string name="sysc_type_wifi">仅wifi下</string>
    <string name="sysc_type_any">任何网络</string>
    <string name="launch_type">启动设置</string>
    <string name="launch_type_explain">拍摄模式:启动客户端优先打开摄像头</string>
    <string name="launch_type_watch">观看模式</string>
    <string name="launch_type_shoot">拍摄模式</string>
	<string name="account_bind">账号绑定</string>
	<string name="phone_bind">手机账号绑定</string>
	<string name="input_phonenum">输入手机号</string>
	<string name="phonenum_prefix">+86</string>
	<string name="phone_bind_explain">通过手机号可以找到更多的朋友</string>
	<string name="next_step">下一步</string>
	<string name="input_check_no">输入验证码</string>
	<string name="new_check_no_prefix">重新发送(</string>
	<string name="time_90">90</string>
	<string name="new_check_no_suffix">)</string>
	<string name="not_bind">未绑定</string>
	<string name="safe">手机号绑定(保险箱)</string>
	<string name="safe_explain">开启保险箱功能的时候建议绑定第二个手机号，以便找回保险箱密码</string>
	<string name="email_bind">邮箱绑定</string>
	<string name="email_prompt">输入邮箱地址</string>
	<string name="email_bind_explain">通过邮箱地址可以找到更多的朋友</string>
	<string name="send_email">发送验证邮件</string>
	<string name="sina_weibo">新浪微博</string>
	<string name="tencent_weibo">腾讯微博</string>
	<string name="renren">人人网</string>
	<string name="sina_bind">新浪微博</string>
	<string name="tencent_bind">腾讯微博</string>
	<string name="renren_bind">人人网</string>
	<string name="account_set">账号设置</string>
	<string name="personal_info">个人信息</string>
	<string name="privacy_set">隐私设置</string>
	<string name="storage_manage">存储管理</string>
	<string name="about_looklook">关于looklook</string>
	<string name="exit">退出当前账号</string>
	<string name="recommend">looklook推荐</string>
	<string name="local_data">本地</string>
	<string name="cloud_data">云端</string>
	<string name="not_upload_data">未同步</string>
	<string name="synchronized_data">已同步</string>
	<string name="browse_cache_data">浏览缓存</string>
	<string name="favorites_data">收藏</string>
	<string name="intelligent_cleanup">智能清理</string>
	<string name="default_size">0K</string>
	<string name="synchronized_cleanup">手动清理</string>
	<string name="synchronized_cleanupall">清空所有同步记录</string>
	<string name="storagemanager_cancel">取消</string>
	<string name="more_operate">更多操作</string>
	<string name="browsecache_cleanupall">清空所有浏览缓存记录</string>
	<string name="primsg_clean_video">清空视频记录</string>
	<string name="primsg_clean_audio">清空音频记录</string>
	<string name="primsg_clean_pic">清空图片记录</string>
	<string name="primsg_cleanupall">清空所有私信记录</string>
	<string name="favorites_cleanupall">清空所有收藏记录</string>
    <string name="upload_download_manage">上传下载管理</string>
    <string name="sava_auto">拍摄自动保存到手机相册</string>
    <string name="display_location">显示拍摄位置</string>
    <string name="clear_cache">缓存自动清理</string>
    <string name="clean_all">清空全部缓存</string>
    <string name="single_mark">个人水印</string>
    <string name="amend_password">修改密码</string>
    <string name="share_data">共享数据</string>
    <string name="share_set">分享设置</string>
    <string name="dialog_globe_loading">请稍等</string>
    <string name="single_complete">完成</string>
    <string name="photo">头像</string>
    <string name="camera">拍照</string>
    <string name="local_pic">从相册中选择</string>
    <string name="nickname">昵称</string>
    <string name="nickname_modify">昵称修改</string>
    <string name="input_nickname">输入昵称</string>
    <string name="nickname_num">20</string>
    <string name="sex">性别</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="sex_modify">性别修改</string>
    <string name="unknown">""</string>
    <string name="secret">保密</string>
    <string name="birthday">出生日期</string>
    <string name="birthday_modify">生日修改</string>
    <string name="area_modify">地区修改</string>
    <string name="area">地区</string>
    <string name="signature">心情短语</string>
     <string name="input_signature">输入心情短语</string>
    <string name="signature_num">14</string>
    <string name="login_pwd">手机邮箱登录密码</string>
    <string name="login_pwd_explain">手机邮箱登陆密码修改</string>
    <string name="current_pwd">旧密码：</string>
    <string name="new_pwd">新密码：</string>
    <string name="repeat_new_pwd">重复密码：</string>
    <string name="gesture_pwd">保险箱</string>
    <string name="gesture_pwd_explain">为保险箱创建一个解锁图案，他人在使用你的手机时无法看到</string>
    <string name="to_create">立即创建</string>
    <string name="create_gesture_pwd_prompt0">请输入手势密码</string>
    <string name="create_gesture_pwd_prompt1">绘制解锁密码</string>
    <string name="create_gesture_pwd_prompt2">请再次绘制解锁密码</string>
    <string name="create_gesture_pwd_prompt3">忘记手势密码？</string>
    <string name="open_gesture_pwd">开启手势密码</string>
    <string name="reset_geture_pwd">重置手势密码</string>
    <string name="cancel_safe_mode">取消保险箱模式</string>
    <string name="is_on">已开启</string>
    <string name="is_off">未开启</string>
    <string name="privmsg">私信</string>
    <string name="privmsg_explain">何人可给我发私信</string>
    <string name="group_some">我关注的</string>
    <string name="group_all">所有人</string>
    <string name="group_myself">仅自己</string>
    <string name="friends">我的朋友</string>
    <string name="friends_explain">我的朋友关系何人可见</string>
    <string name="publish">默认发布设置</string>
    <string name="content">我的内容</string>
    <string name="content_explain">我的内容和评论何人可见</string>
    <string name="location">地理位置</string>
    <string name="location_explain">内容所在位置何人可见</string>
    <string name="voice">语音描述</string>
    <string name="voice_explain">我的原音何人可听到</string>
    <string name="indivi_mark">个性水印</string>
    <string name="write_mark">请输入水印</string>
    <string name="str_activity_login_title">looklook账号登录</string>
    <string name="str_activity_login_account">   账号</string>
    <string name="str_activity_login_password">   密码</string>
    <string name="str_activity_login_forget"><u>忘记密码?</u></string>
    <string name="str_activity_login_main_reg">注册</string>
    <string name="str_activity_login_main_login">登录</string>
    <string name="str_activity_login_main_hint_account">请输入邮箱地址（4-30字符）</string>
    <string name="str_activity_login_main_hint_password">密码</string>
    <string name="invite_dialog_prefix">" 我用#looklook#记录生活，期待与你分享! 下载:http://download.looklook.cn/ (分享自"</string>
    <string name="modifi_code">旧密码</string>
    <string name="new_code">新密码</string>
    <string name="sina_set">新浪微博</string>
    <string name="tecent_set">腾讯微博</string>
    <string name="uploading">正在上传</string>
    <string name="no_upload_task">没有上传任务</string>
    <string name="downloading">正在下载</string>
    <string name="no_download_task">没有下载任务</string>
    <string name="network_task">网络任务</string>
    <string name="network_exception">网络异常</string>
    <string name="prompt_network_alarm">还有任务还没上传完,建议打开looklook继续上传</string>
    <string name="view_tag_key"></string>
    <string name="homepage_all_vedio">全部视频</string>
    <string name="homepage_attention_vedio">关注视频</string>
    <string name="homepage_my_vedio">我的视频</string>
    <string name="homepage_attention_title">关注</string>
    <string name="homepage_fans">粉丝</string>
    <string name="homepage_my_title">我的</string>
    <string name="homepage_checked_remove_num">已选中%1$s条内容</string>
    <string name="homepage_my_album">我的相册</string>
    <string name="homepage_my_interact">我的互动</string>
    <string name="homepage_ta_album">个人相册</string>
    <string name="homepage_ta_interact">Ta的互动</string>
    <string name="homepage_my_map_mode">地图模式</string>
    <string name="homepage_my_pubu_mode">瀑布流</string>
    <string name="homepage_my_create_savebox">创建保险箱</string>
    <string name="homepage_my_open_savebox">打开保险箱</string>
    <string name="homepage_my_close_savebox">退出保险箱</string>
    <string name="homepage_diary_unsync">未同步</string>
    <string name="homepage_diary_shared">已分享</string>
    <string name="homepage_diary_savebox">保险箱</string>
    <string name="homepage_diary_tags">标签</string>
    <string name="record_promt">长按麦克风录制语音描述</string>
    <string-array name="homepage_filter_text">
        <item>保险箱</item>
        <item>已发布</item>
        <item>未上传</item>
        <item>标签</item>
        <item>全部</item>
    </string-array>
    <string name="edit_photo_title">编辑</string>
    <string name="edit_photo_cutup">裁剪</string>
    <string name="edit_photo_effect">特效</string>
    <string name="edit_photo_effect_default">正常</string>
    <string name="edit_photo_detail_beautifysound">美化声音</string>
    <string name="edit_photo_detail_position">位置</string>
    <string name="ask_download_plugin">安装特效插件, 拥有绚丽效果!</string>
    <string name="install">安装</string>
</resources>