<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/popwindow_title_margin"
    android:background="@drawable/tankuang"
    >
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@android:color/white"
    	android:layout_margin="@dimen/popwindow_title_margin"
    	android:text="@string/more_operate"
    	android:textSize="@dimen/setting_max"
        />
    <Button
        android:id="@+id/btn_synchronized_cleanup"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_menu_white"
    	android:textColor="@android:color/black"
    	android:layout_margin="@dimen/popwindow_item_margin"
    	android:padding="@dimen/popwindow_item_padding"
    	android:textSize="@dimen/setting_middle"
    	android:text="@string/synchronized_cleanup"
        />
    <Button
        android:id="@+id/btn_synchronized_cleanupall"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_menu_white"
    	android:textColor="@android:color/black"
    	android:layout_margin="@dimen/popwindow_item_margin"
    	android:padding="@dimen/popwindow_item_padding"
    	android:textSize="@dimen/setting_middle"
    	android:text="@string/synchronized_cleanupall"
        />
    <Button
        android:id="@+id/btn_synchronized_cancel"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_menu_black"
    	android:textColor="@android:color/white"
    	android:layout_margin="@dimen/popwindow_item_margin"
    	android:padding="@dimen/popwindow_item_padding"
    	android:textSize="@dimen/setting_middle"
    	android:text="@string/storagemanager_cancel"
        />
</LinearLayout>