<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:gravity="center_horizontal"
    android:paddingBottom="10dp"
    android:background="@drawable/tankuang"
    >
    <Button
        android:id="@+id/btn_from_camera"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_menu_white"
    	android:textColor="@android:color/black"
    	android:layout_marginTop="10dp"
    	android:text="@string/camera"
    	android:textSize="18sp"
        />
    <Button
        android:id="@+id/btn_from_pictures"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_menu_white"
    	android:textColor="@android:color/black"
    	android:layout_marginTop="10dp"
    	android:text="@string/local_pic"
    	android:textSize="18sp"
        />
    <Button
        android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/btn_menu_black"
    	android:textColor="@android:color/white"
    	android:layout_marginTop="10dp"
    	android:text="@string/cancel"
    	android:textSize="18sp"
        />
</LinearLayout>