<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bj" >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/tou" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:src="@drawable/btn_activity_common_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/email_bind"
            android:textColor="@color/white"
            android:textSize="@dimen/setting_title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linear_bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp" >

        <EditText
            android:id="@+id/et_email"
            style="@style/myedittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_prompt"
            android:paddingLeft="20dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_bound"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/email_bind_explain"
        android:textColor="@color/setting_default_text_gray"
        android:textSize="@dimen/setting_max" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/btn_activity_setting_bg"
        android:gravity="center"
        android:text="@string/send_email"
        android:textColor="@color/setting_button_color_selector"
        android:textSize="@dimen/setting_max" />

</RelativeLayout>