<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="20dip"
    android:paddingRight="20dip" >
    
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/kuang_bg"
        android:gravity="center_horizontal" >
        
        <TextView 
            style="@style/dialog_text_style"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="@string/ask_download_plugin"
            android:gravity="center"/>
        
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center" >
            
			<TextView 
			    style="@style/dialog_text_style"
			    android:id="@+id/yes_download_plugin"
			    android:layout_width="0dip"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
			    android:gravity="center"
			    android:layout_marginLeft="@dimen/size_15dip"
			    android:layout_marginRight="@dimen/size_15dip"
			    android:layout_marginTop="@dimen/size_10dip"
			    android:layout_marginBottom="@dimen/size_10dip"
			    android:paddingTop="4dip"
			    android:paddingBottom="4dip"
			    android:text="@string/install"
			    android:background="#ff00aa33" />
			
			<TextView 
			    style="@style/dialog_text_style"
			    android:id="@+id/no_cancel"
			    android:layout_width="0dip"
			    android:layout_weight="1"
			    android:layout_height="wrap_content"
				android:gravity="center"
				android:layout_marginLeft="@dimen/size_15dip"
			    android:layout_marginRight="@dimen/size_15dip"
			    android:layout_marginTop="@dimen/size_10dip"
			    android:layout_marginBottom="@dimen/size_10dip"
			    android:paddingTop="4dip"
			    android:paddingBottom="4dip"
			    android:text="@string/cancel"
			    android:background="#ffaa3300" />
			
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>