<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/xiala"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/xiala_line"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/tv_all_vedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/homepage_all_vedio"
        android:textSize="15sp"
        android:padding="8dp"
        android:clickable="true"
        android:textColor="#707070"
        android:background="@drawable/bg_activity_homepage_title_down_list_item"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/xiala_line"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/tv_attention_vedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_attention_vedio"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bg_activity_homepage_title_down_list_item"
        android:textSize="15sp"
        android:textColor="#707070"
        android:clickable="true"
        android:padding="8dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/xiala_line"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/tv_my_vedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/homepage_my_vedio"
        android:textSize="15sp"
        android:textColor="#707070"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:background="@drawable/bg_activity_homepage_title_down_list_item"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/xiala_line"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>